--- a/_posts/the-stack/my-stack-for-data-science-on-the-map-in-the-public-service.Rmd
+++ b/_posts/the-stack/my-stack-for-data-science-on-the-map-in-the-public-service.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "My Stack for Data Science on the Map in the Public Service"
+title: "A Public Service Data Science Stack: Collaboration"
 description: |
   A short description of the post.
 author:
@@ -16,8 +16,8 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-I recently gave a talk for the [R User's Network: Australian Public Policy
-(Runapp)]() about the kinds of data science products we make at my work, and
+I recently gave a talk for the [R User's Network: Australian Public Policy (Runapp)](https://runapp-aus.github.io/runapp_website/)
+about the kinds of data science products we make at my work, and
 the stack of tools behind them. I was left with a bit to say on the tools
 side of things, so I decided to follow up here, also for the benefit of
 people outside the group.
@@ -50,7 +50,7 @@ For rest of this post I'll be talking about the collaboration blob.
 
 The bedrock of our collaboration is git and GitHub. We have a GitHub
 organisation our team works within - they're free! Every data science project
-is a git project. We use the GitHub project managment tools to organise. The
+is a git project. We use the GitHub project management tools to organise. The
 main reason this works for us is because our projects are quite code heavy.
 
 ## Git
@@ -69,18 +69,18 @@ going to mention two:
   understanding the detail of a teammate's approach - as invariably happens -
   we can go read their code.
 * reuse: as we find ourselves wanting to reuse code from previous projects, we
-  can eaisily lay hands on it, and refactor it out into functions in team
+  can easily lay hands on it, and refactor it out into functions in team
   package. This ensures people are computing the same things the same way,
   and all benefiting from enhancements discovered over time.
 
 When taking the *from code* approach for a team, I can't imagine not using
 git. How can you expect to reproduce something if there is any uncertainty as
-to the final verison that produced the output? The same uncertainty
+to the final version that produced the output? The same uncertainty
 undermines reuse. If I can't be sure how something was done, the safest option
 is to redo it from scratch.
 
 I'd be interest to hear actually from teams that don't use git (or subversion
-etc.): How you do you manage multiple anaylysts contributing to the same projects?
+etc.): How you do you manage multiple analysts contributing to the same projects?
 
 Git facilitates continuous integration of project work so that you can always
 be working on a project that contains up to date input from colleagues.
@@ -95,7 +95,7 @@ in a more manual way tends toward certain pathologies like:
     people tend want to rewrite the work of others in their style rather than bothering to understand it.
 
 These are real things I have seen in teams that are not collaborating well.
-To innoculate against these pathologies, I think it's obvious you need to have
+To inoculate against these pathologies, I think it's obvious you need to have
 people seeing and using eachother's work as it is developed, so there's ample
 opportunity for questions to be asked and approaches to be harmonised. 
 
@@ -104,7 +104,7 @@ establishing the team's norms. And much better than the larger scale
 conflicts that ensue under the pressure of things not fitting together well
 in a final crunch.
 
-Git does not magically gurantee the this kind of collaboration for data
+Git does not magically guarantee the this kind of collaboration for data
 science projects, but it makes
 it easier and thus more likely. 
 
@@ -112,10 +112,10 @@ it easier and thus more likely.
 
 Initially my team was using hosted git repos on [Azure Dev Ops](https://azure.microsoft.com/en-au/services/devops/), 
 because at that time GitHub organisations were not free, and we had access
-to Dev Ops via existing organisational licensing arrangemnts. 
+to Dev Ops via existing organisational licensing arrangements. 
 
 We found Dev Ops was not great at keeping you informed about what teammates
-are up to, and generally kind of burried information you want to see under
+are up to, and generally kind of buried information you want to see under
 too many clicks. Its project management tools were clearly geared towards
 enterprise workflows which creates a situation where complex workflows are
 made possible at the cost of making simple workflows complex [^This is also a problem with Jira + Confluence.]. So instead we were using Microsoft
@@ -124,7 +124,7 @@ integration with our repositories, so things had to be manually kept in sync.
 
 GitHub by contrast doesn't give you highly configurable project management
 tools, however it feels like they hit a sweet spot for us where there is
-just enough flexibility to accomodate our needs. We switched to GitHub pretty
+just enough flexibility to accommodate our needs. We switched to GitHub pretty
 much as soon as organisations became free.
 
 We've used [GitHub issues](https://docs.github.com/en/github/managing-your-work-on-github/about-issues)
@@ -132,12 +132,12 @@ as general vehicles for project related stuff like:
 
 * Describing requirements for tasks that need to be done
 * Deciding on methodology
-* Sharing observations arisng from data analysis (complete with plots etc)
+* Sharing observations arising from data analysis (complete with plots etc)
 * Review comments
 * Bug reports and feature requests for internal packages
 
 Of course a lot of this happens informally via face to
-face conversations or instant messanger, but we very much prefer issues to email.
+face conversations or instant messenger, but we very much prefer issues to email.
 They keep project information centralised with the project code where it can
 add context, rather dispersed into inboxes where it can be lost.
 
@@ -151,7 +151,7 @@ knitr::include_graphics("./issue_with_plots.png")
 
 For larger projects we use the [GitHub project boards](https://docs.github.com/en/github/managing-your-work-on-github/about-project-boards) 
 feature to organise issues. So far we've kept this to a simple 'To do',
-'Doing', 'Done' type setup. With sparing use of issue tags for cetain
+'Doing', 'Done' type setup. With sparing use of issue tags for certain
 important tasks. There's some basic automation options available - for
 example closing issues that are moved to 'Done'.
 
@@ -184,7 +184,7 @@ and how it interacts with the work of others. I think this can
 help build shared understanding, and thus shared ownership of the project.
 Also helps with getting up to speed after a context switch.
  
-The final oberservation is how the dependency graph creates confidence when
+The final observation is how the dependency graph creates confidence when
 it comes to changing or fixing code written by collaborators. I can remember
 some bad old projects, where the global environment was used a little too
 recklessly, and the only way to truly know what changes were safe to make was
@@ -200,7 +200,7 @@ places you need to check for unintended consequences, after which you're D-O-N-E
 
 As I touched on before, `{rmarkdown}`'s value as a collaborative tool comes
 from the way it keeps analysis output in sync with the source code that
-generates it. This helps avoid innacuracies creeping in due to rework, and
+generates it. This helps avoid inaccuracies creeping in due to rework, and
 means when ambiguity is discovered it can be resolved by consulting the
 source code that generated the document.
 
@@ -208,6 +208,10 @@ To make the source-output link easy to follow we've adopted the practice of
 including a ['reproducibility receipt' at the foot of our report source.](https://github.com/MilesMcBain/dflow/blob/master/inst/templates/blank.Rmd#L14) 
 
 It looks like this in a report:
+
+```{r, fig.cap = "A knitted reproducibility receipt, showing date, repo, and R environment."}
+knitr::include_graphics("./repro_receipt.PNG")
+```
 
 With the receipt in place, you can always have a reference to the location
 and version of the report source.
@@ -223,7 +227,11 @@ situation.
 
 ## Visual Studio Code
 
-VSCode has pretty great support for R, it's the most popular choice of daily driver in my team [^that's not due to me, I was actually late to the party!].
+```{r, fig.cap = "VSCode being used for R development"}
+knitr::include_graphics("./vscode.png")
+```
+
+VSCode has [pretty great support for R](https://github.com/Ikuyadeu/vscode-R), it's the most popular choice of daily driver in my team [^that's not due to me, I was actually late to the party!].
 It has one incredible draw-card feature for collaboration, and that is: [Live Share](https://visualstudio.microsoft.com/services/live-share/).
 
 This is collaborative Google-Docs-style editing. Everyone can see what
@@ -258,6 +266,25 @@ discussions, rather than scheduled fixtures. I do think this helped us stay
 productive.
 
 The screen sharing is solid so it's good for demonstrating. You can grant
-teammates remote control of your sceen too, but it's a bit laggy and janky
+teammates remote control of your screen too, but it's a bit laggy and janky
 for pair programming - it's completely inferior to VSCode Live Share for this
 purpose.
+
+# The Wrap
+
+So that was the main pieces in the collaboration stack. Underpinning the
+choice of tools is a team focus on reproducibility and visibility in the
+context of code-centric workflows. There's also a distinct bias toward open
+source and free tools - we're quite proud to be able to achieve what we do
+without charging exorbitant licenses to the public purse.
+
+In a this new work-from-home friendly world we've also found ourselves
+attracted to tools that allow voice, video, screen-share, pair programming
+etc to happen in adhoc ways, simulating interactions that would take place
+in the office.
+
+As always I am not trying to put us on a pedestal or suggesting that we have
+made the best choices in every regard. What we have seems to be working well,
+but I am very keen to hear tips from other people doing similar kinds of work
+for similarly constrained organisations. Please share in the comments or tag
+me in the Runapp slack channel!
