--- a/_posts/zsa-moonlander-review/60-days-with-the-zsa-moonlander-review.Rmd
+++ b/_posts/zsa-moonlander-review/60-days-with-the-zsa-moonlander-review.Rmd
@@ -44,27 +44,40 @@ For the most part the Moonlander felt like a premium device. Its surfaces felt g
 
 I do have some nitpicks though:
 
-For a device in this price range the 'case' was a let down. It wasn't really a
-case so much as a thin neoprene slip that keeps the two halves, allen key, and
-cables bundled together. It didn't seem like it would offers any protection
-whatsoever from bumps during transit. By contrast my headphones, which cost in
-the same ballpark as the Moonlander, shipped with a rigid zip-up case.
-
-The mechanism in the tenting legs felt flimsy. When rotating them I could feel
-a gear clicking though a discrete set of positions, but the sound and feel of
-this gave the impression that the gear was plastic. Unsettling metallic groans were emitted from the springs on the allen screws when tightening them that made me feel caution was required.
+The mechanism in the tenting legs felt flimsy. When rotating them I could feel a
+gear clicking though a discrete set of positions, but the sound and feel of this
+gave the impression that the gear was plastic. Unsettling metallic groans were
+emitted from the springs on the allen screws when tightening them that made me
+feel caution was required.
 
 
 # Portability
 
 This is an important one for me. I can't afford two Moonlanders, so I needed it
-to be able accompany me in a bicycle pannier bag on my daily commute. Also setting it up at the destination can't be a chore.
+to be able accompany me in a bicycle pannier bag on my daily commute. Also
+setting it up at the destination can't be a chore.
 
-A big strike against the Moonlander in this regard is the lack of rigid case. After some careful measuring I was able to find exactly one reasonably priced rigid case for DJ headphones that would accept it, for which I paid AUD $40.
+A big strike against the Moonlander in this regard is the lack of rigid case.
+For a device in this price range it was a let down. What was provided wasn't
+really a case so much as a thin neoprene slip that keeps the two halves, allen
+key, and cables bundled together. It didn't seem like it would offers any
+protection whatsoever from bumps during transit. By contrast my headphones,
+which cost in the same ballpark as the Moonlander, shipped with a rigid zip-up
+case.
 
-In its stock neoprene travel bundle, the board, cables, and allen key weighed in at around a kilo. I didn't notice the weight on the bike, but you would in a backpack, particularly since it is dense weight. Heavy enough to notice, not heavy enough to be an issue I think.
+After some careful measuring I was able to find exactly one reasonably priced rigid case for DJ headphones that would accept it, for which I paid AUD $40.
 
-The setup and tear down process does feel a bit cumbersome at first. The fit of the allen key in the tenting screws was quite tight, so I found myself having to concentrate to slot it in. Perhaps the most difficult thing to get down was that the left thumb cluster screw is reverse threaded. "Lift-to-loosen" I found myself muttering under my breath. It's the kind of thing you forget in hurry, which I frequently am when trying to depart.
+In its stock neoprene travel bundle, the board, cables, and allen key weighed in
+at around a kilo. I didn't notice the weight on the bike, but you would in a
+backpack, particularly since it is dense weight. Heavy enough to notice, not
+heavy enough to be an issue I think.
+
+The setup and tear down process does feel a bit cumbersome at first. The fit of
+the allen key in the tenting screws was quite tight, so I found myself having to
+concentrate to slot it in. Perhaps the most difficult thing to get down was that
+the left thumb cluster screw is reverse threaded. "Lift-to-loosen" I found
+myself muttering under my breath. It's the kind of thing you forget in hurry,
+which I frequently am when trying to depart.
 
 When packing up, the cables don't have a dedicated place to live in the neoprene slip which meant pack up always felt a bit haphazard. A couple of times I accidentally popped off a keycap trying to squeeze the cables into the slip along side one of the halves.
 
@@ -72,18 +85,67 @@ On the plus side, the wrist wrest folding mechanism is quite slick with a magnet
 
 After I got the rigid case packing was greatly simplified. I started using the slip as padding only, and the case was sufficiently large that I could keep the tenting legs in my favoured position while stowing it.
 
-So while I agree the Moonlander is portable, I don't think it's appreciably more portable than a small keyboard (e.g. 60% form factor). Compared with other ergonomic boards, it probably would be at the portable end, definitely more portable than traditional offerings from Microsoft, Kinesis, et. al. 
+So while I agree the Moonlander is portable, I don't think it's appreciably more
+portable than a small keyboard (e.g. 60% form factor). Compared with other
+ergonomic boards, it probably would be at the portable end, definitely more
+portable than traditional offerings from Microsoft, Kinesis, et. al.
 
 # Tweakability
 
-This is where the Moonlander shone for me. So many possibilities! Over the course of my time with it I:
+This is where the Moonlander shone for me. The software side of things is incredibly well executed. There are two main ways you can customise the Moonlander's functionality: 
 
-* Configured [my own custom layout](https://configure.zsa.io/moonlander/layouts/L4P6y/latest/0) with ZSA's online editor
-* Swapped out all the key switches (twice)
-* Progressed to building the QMK firmware from source to accommodate config not supported by the online editor
-* Added 3d printed aftermarket tenting legs to make it tentable without thumb cluster down
-* Added custom keycaps to change the thumb cluster ergonomics
+* You can use [online GUI editor called 'Oryx'](https://configure.zsa.io/moonlander/layouts/default/latest/0) which seems to be backed by `git`.
+  Changes are incrementally tracked and you can fork a configuration at any
+  point. Oryx is focused on the key map, but it does expose a subset of deeper
+  stuff that is possible in the firmware.
+* You can edit the Moonlander firmware directly in C code. It uses a framework
+  called 'QMK'. ZSA provide instructions on how to get going with this, and QMK
+  itself has some of the nicest documentation of any open source project that I
+  have ever seen.
 
-Of course the dark side of all of this was that I was doing a lot of it because I was struggling to get comfortable. But I was having a fantastic time tweaking.
+I didn't do anything too radical but the possibilities are expansive. To give a taste for what's possible:
 
-The root of the magic is the QMK firmware.
+I swapped out my shift keys for layer toggles. This meant I could directly control the 'shifted' version of each key. With this concept I:
+
+* Made underscore, `_`, the shift of space.
+* Swapped the locations of angle brackets `<`,`>` and parentheses `(`,`)`
+* Made Lshift + Rshift `{`, with `}` on hold
+* Made Rshift + Lshift `[`, with `]` on hold
+
+The idea being to move symbols that I use regularly while working to more
+convenient locations - and the results felt pretty damn good! This experience
+has cemented for me that deep programmability is an important facet of truly
+ergonomic hardware. All of us have different preferences and physical
+limitations, too many and varied to design for in hardware!
+
+One bonus in the Moonlander's favour is that QMK is an open source firmware that
+is used by a variety of exotic keyboards including kit-builds. So experience
+with QMK is likely to be portable to other boards, rather than being one
+manufacturer's way of doing things.
+
+I didn't get deep into QMK but I did work with it to set faster macros for
+commonly used symbol combinations like `%>%` and `<-`, as well as playing with
+the acceleration parameters of mouse control mode. This was all much easier than
+I expected, thanks to the excellent docs. I found a Docker config for the QMK build environment that made building my changes a breeze.
+
+One nitpick I'd make about tweaking that the iteration loop is quite slow for
+continuous parameters. These underpin some important features, for example: How
+long does a key need to be held down to register as a hold? How quick does a
+double tap need to be? How fast should the mouse accelerate in mouse control
+mode? The only way to set these is according to personal taste, but to change a
+value means recompiling the firmware and re-flashing the board. It would be cool
+if the board could provide some kind of shell that would accept commands
+to alter these parameters live and feel the effects ^[This nitpick is minor since, I think within QMK it would definitely be possible to assign keys to increment and decrement these parameters live - it just would be nice to have a workflow for this out of the box.].
+
+But nitpicks aside, the Moonlander was a tweaker's dream. I definitely want my next board to be running QMK.
+
+However, there's a dark side to this which is tweaking can eat a lot of time,
+and it was definitely tempting to try to make up for hardware that wasn't
+working for me in software. I flashed the Moonlander a ton of times just trying
+to find comfortable positions for some of my most important keys (escape, space,
+control, backspace) since they were causing me pain when I had them on the thumb
+cluster.
+
+# Ergonomics
+
+ZSA's marketing bills the Moonlanader as a "Next-generation ergonomic keyboard".
