--- a/_posts/zsa-moonlander-review/60-days-with-the-zsa-moonlander-review.Rmd
+++ b/_posts/zsa-moonlander-review/60-days-with-the-zsa-moonlander-review.Rmd
@@ -38,9 +38,19 @@ The Moonlander I ordered was the black version with Kailh Box Red (linear) switc
 
 ![]()
 
+Some context about me: I spend most of my job writing code to do data science
+work in R, during which I use a keyboard-driven workflow. I work standing 100%
+of the time, and I avoid using a mouse wherever possible. For text editing I
+favour either [Spacemacs](https://www.spacemacs.org/) or
+[VSpaceCode](https://vspacecode.github.io/). My daily-driver keyboard for the
+last 4 or so years has been the Microsoft Sculpt.
+
 # Quality
 
-For the most part the Moonlander felt like a premium device. Its surfaces felt good under my hands. The key caps are subtly textured and ever so slightly grippy. They felt weighty and durable. They typing sounds were thick and substantial, without being excessively loud [^although a lot of this is due to my initial choice of a linear switch]. It gave a very tidy first impression.
+For the most part the Moonlander felt like a premium device. Its surfaces felt
+good under my hands. The key caps are subtly textured and ever so slightly
+grippy. They felt weighty and durable. They typing sounds were thick and
+substantial, without being excessively loud [^although a lot of this is due to my initial choice of a linear switch]. It gave a very tidy first impression.
 
 I do have some nitpicks though:
 
@@ -60,7 +70,7 @@ setting it up at the destination can't be a chore.
 A big strike against the Moonlander in this regard is the lack of rigid case.
 For a device in this price range it was a let down. What was provided wasn't
 really a case so much as a thin neoprene slip that keeps the two halves, allen
-key, and cables bundled together. It didn't seem like it would offers any
+key, and cables bundled together. It didn't seem like it would offer any
 protection whatsoever from bumps during transit. By contrast my headphones,
 which cost in the same ballpark as the Moonlander, shipped with a rigid zip-up
 case.
@@ -73,11 +83,11 @@ backpack, particularly since it is dense weight. Heavy enough to notice, not
 heavy enough to be an issue I think.
 
 The setup and tear down process does feel a bit cumbersome at first. The fit of
-the allen key in the tenting screws was quite tight, so I found myself having to
-concentrate to slot it in. Perhaps the most difficult thing to get down was that
-the left thumb cluster screw is reverse threaded. "Lift-to-loosen" I found
-myself muttering under my breath. It's the kind of thing you forget in hurry,
-which I frequently am when trying to depart.
+the allen key in the tenting screws was quite tight, so I found myself always
+having to concentrate to slot it in. Perhaps the most difficult thing to get
+down was that the left thumb cluster screw is reverse threaded. "Lift-to-loosen"
+I found myself muttering under my breath. It's the kind of thing you forget in
+hurry, which I frequently am when trying to depart.
 
 When packing up, the cables don't have a dedicated place to live in the neoprene slip which meant pack up always felt a bit haphazard. A couple of times I accidentally popped off a keycap trying to squeeze the cables into the slip along side one of the halves.
 
@@ -91,6 +101,8 @@ ergonomic boards, it probably would be at the portable end, definitely more
 portable than traditional offerings from Microsoft, Kinesis, et. al.
 
 # Tweakability
+
+## Software 
 
 This is where the Moonlander shone for me. The software side of things is incredibly well executed. There are two main ways you can customise the Moonlander's functionality: 
 
@@ -137,15 +149,144 @@ value means recompiling the firmware and re-flashing the board. It would be cool
 if the board could provide some kind of shell that would accept commands
 to alter these parameters live and feel the effects ^[This nitpick is minor since, I think within QMK it would definitely be possible to assign keys to increment and decrement these parameters live - it just would be nice to have a workflow for this out of the box.].
 
-But nitpicks aside, the Moonlander was a tweaker's dream. I definitely want my next board to be running QMK.
+Nitpicks aside, the Moonlander was a software tweaker's dream. I definitely want my next board to be running QMK.
 
-However, there's a dark side to this which is tweaking can eat a lot of time,
-and it was definitely tempting to try to make up for hardware that wasn't
-working for me in software. I flashed the Moonlander a ton of times just trying
-to find comfortable positions for some of my most important keys (escape, space,
-control, backspace) since they were causing me pain when I had them on the thumb
-cluster.
+## Hardware
+
+On the hardware side there are a few avenues for tweaking. The thumb clusters
+seem to have been designed to be swappable, although no other alternatives exist
+at this time. I could easily imagine ZSA is planning a cluster with a pointing
+device. There's also some mysterious sets of screw holes in the base of the
+board, maybe for extreme tenting mode? Again there's nothing out at the moment. 
+
+So the hardware tweaking angle I had open to me was the key switches. They're
+'hot-swappable', which to my surprise meant I could literally swap them out
+while the board was hot (powered). The swapping process was repetitive but not
+otherwise challenging. There was a switch puller tool included for this
+purpose. It felt kind of like what imagine medieval dentistry was.
+
+I tried 3 sets of switches all up, including the Kailh Box Red switches I
+ordered the board with. The Box Reds were definitely a mistake for me. I found
+the travel too deep, like typing on a pillow. This lead to a lot of
+fumbling with missed presses or double-presses as I struggled to get a feel for
+the actuation point. I tried pushing the switches all the way down to the bottom-out point, but that felt fatiguing.
+
+I had a much better time with some Kailh Speed Copper switches which have lower
+travel and a higher actuation point. But even these felt like work compared to
+what I was used to on the Microsoft Sculpt.
+
+The hot-swap design worked really well for me since I didn't really know what I
+wanted in a switch. I ordered a sampler batch and had a fun time trying them all
+in different positions to get a feel for what I liked. The Moonlander taught me a lot about the influence of switches, and the hot-swap ability is a convenient feature that I would regard highly when choosing my next keyboard, although it may not be essential, having some concept of what I like now.
+
 
 # Ergonomics
 
 ZSA's marketing bills the Moonlanader as a "Next-generation ergonomic keyboard".
+Apart from the customisable key layouts, the main ergonomic features of the
+Moonlander that it stakes this claim on seem to be:
+
+* Split halves for typing at more comfortable width and angle
+* Staggered 'Columnar' or 'Ortholinear' key arrangement which changes home position reach angles reach distances
+* Wrist rests (removable)
+* Tiltable thumb cluster
+* Ability to tent the board using a tenting leg and thumb cluster.
+
+Some of these things worked for me, others did not. I expect this is a highly personal thing. 
+
+## Split Halves
+
+A thing that worked was typing with a much wider posture encouraged by having
+the halves set around shoulder width. I have a sense that standing to type with
+my wrists close together exacerbates a tendency for me to round my shoulders
+forward - since it concentrates weight in front of me. With the Moonlander I
+felt like I could more easily maintain a healthier posture.
+
+## Staggered Columns
+
+The staggered columnar arrangement presented a bit of a stumbling block
+initially. It took me 7 days to get back to my previous typing speeds ^[Perhaps I had some advantage coming from a board that was already split]. I
+have mixed feelings about the arrangement. I can get on board with the idea it
+makes hand movements symmetrical, but I didn't find universally better as the hype would have you believe. 
+
+The columnar arrangement makes different tradeoffs. Some keys are easier to
+reach while some get harder. For example: The middle columns are offset slightly
+downward from the index finger columns. Why is this is case when these columns
+use the same finger? The effect of this is that (in QWERTY) `Y` and `T` become
+easier to reach while `N`, a frequent key in programming, becomes a much further reach than on a staggered board.
+
+I did notice some fatigue and pain in my right index finger and I believe the
+`N` position contributed. This isn't an insurmountable problem, it could be
+fixed by swapping `N` for a less common key - but [as was noted by the creator of the Workman keyboard layout](https://workmanlayout.org/), swapping keys without consideration for the interaction effects can produce poor results. Probably a better option is swapping to a new layout that has been holistically designed.
+
+Following that line of thinking I experimented with learning DVORAK, where I
+noticed another issue introduced by the staggered columns: In DVORAK the outside
+keys above home are `'` and `L`. It seems that the `L` position upsets a lot of
+programmers and terminal users, in part due to proximity to `S` which is
+immediately below it. I.e. `ls -l` uses the pinky for all the characters other
+than space in DVORAK. So what is recommended is that the ring finger is used
+when reaching upward for `L` and `-`. This is unconventional but perfectly
+viable on a staggered board, but felt super awkward to me with the Moonlander's
+columns.
+
+What these examples made clear to me is that layouts designed for staggered key
+arrangements do not necessarily perform as well with the offset columnar
+arrangement. Which seems kind of obvious now, but was not something I
+considered when purchasing the Moonlander. `N` was a significant niggle for me
+in QWERTY as I suspect it may be for other programmers.
+
+## Wrist rests
+
+Moving along to other ergonomic features brings us to the wrist rests. They're
+premium feeling plastic, but I found them too hard. I couldn't use them for much
+more than about 45 minutes at a stretch before my wrists and palms started going
+numb and tingly. There's a chance I might have been using them wrong, but I am
+able to use the slightly softer wrist rest on my Microsoft Sculpt all day
+without consciously thinking about it. I removed the wrist rests and went with
+hover typing after the first few days. Thankfully this was easy to do.
+
+## Tenting and Thumb Cluster
+
+So now finally we arrive at the cluster that was tenting and the thumb cluster. This is a challenging part to write since I still have a lot of really raw frustration and anger attached to my experience with this part of the keyboard. 
+
+I'll start by pointing you to how the thumb cluster is marketed by ZSA:
+
+> The thumb module tilts up and down. Use it to find the perfect typing angle, and the wrist support module will automatically follow.
+
+> For small hands, tilt the thumb module up. For bigger hands, tilt it down.
+
+> A custom fit for your hand size.
+
+Next I should tell you my hand size. A common way to measure this seems to be hand length and breadth. So here are these dimensions for me against the [2012 US Army Anthropometric Survey](http://mreed.umtri.umich.edu/mreed/downloads.html#ansur) for males:
+
+```{r, fig.cap = "Compared with surveyed servicemen in the sample I am at the 60th percentile for length but only the 6th for breadth."}
+library(tidyverse)
+ansur_2 <- read_csv("./ANSUR II MALE Public.csv")
+
+my_hand <-tibble(handlength = 195, handbreadth = 81, label = "Me")
+
+ggplot(data = ansur_2, aes(x = handbreadth, y = handlength)) +
+  geom_point(colour = "grey") +
+  geom_density_2d() +
+  geom_point(data = my_hand, colour = "red") +
+  theme_minimal() +
+  geom_text(data = my_hand,
+            aes(label = "Me"),
+            colour = "red",
+            nudge_x = 0,
+            nudge_y = 1,
+            size = 8 
+            ) +
+  labs(
+    title = "My hand size vs males in the ANSUR II 2012 sample",
+    subtitle = "Contours depict observation density",
+    x = "Hand breadth",
+    y = "Hand length"
+  )
+```
+
+So I guess I am outlier-ish. I certainly don't have 'large' hands, but to call
+them 'small' could be misleading depending on what dimensions are important. I
+have 'skinny' hands may be better ^[For someone in the US Army. Against warriors of the keyboard kind I expect I'd fare a little better].
+
+With these hands I couldn't find a way to use the thumb cluster without pain.
